--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "peritoneal-dialysis-monitor",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,9 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mssql": "^11.0.1",
+    "peritoneal-dialysis-monitor": "file:",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.0.0",
     "react-dom": "^18.3.1",
@@ -34,6 +40,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.3.5"
   }
 }
